# OpenGeneticVisualise

./: Dockerfile  README.md  example_tree.newick  pyproject.toml  tree.py  x.py
